# onqlclient-c

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: onql.h
src/: onql.c
